--- a/CSS/style.css
+++ b/CSS/style.css
@@ -155,6 +155,29 @@ ul li a:hover {
     padding-left: 0.2em;
 }
 
+#scrollToTopBtn {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    z-index: 9999;
+    background-color: rgba(216,138,155, 0.3);
+    color: #6B4F4F;
+    border: none;
+    border-radius: 50%;
+    padding: 15px;
+    font-size: 20px;
+    cursor: pointer;
+    display: none;
+    transition: opacity 0.3s, transform 0.3s;
+    backdrop-filter: blur(6px);
+    box-shadow: 0 2px 8px rgba(216, 138, 155, 0.2);
+}
+
+#scrollToTopBtn:hover {
+    background-color: rgba(216,138,155, 0.7);
+    transform: scale(1.1);
+}
+
 /* Responsivo para móviles */
 @media (max-width: 600px) {
     nav ul {
@@ -177,5 +200,10 @@ ul li a:hover {
     #modal img {
         max-width: 90%;
         max-height: 90%;
+    }
+
+    #scrollToTopBtn {
+        padding: 12px;
+        font-size: 16px;
     }
 }
