--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,12 +1,16 @@
+/* Generales */
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #FAF3F3; /*f8f8f8*/
+    background-color: #FAF3F3;
 }
 
+/* Cabecera */
+
 header {
-    background-color: #F8C8DC; /*#ff704*/
+    background-color: #F8C8DC;
     color: #4A4A4A;
     text-align: center;
     padding: 20px;
@@ -16,13 +20,15 @@ h1 {
     color: #6B4F4F;
 }
 
+/* Navegación */
+
 nav ul {
     list-style: none;
     padding: 0;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    background-color: #D88A9B; /*ffccbc*/ 
+    background-color: #D88A9B; 
     margin: 0;
 }
 
@@ -32,16 +38,18 @@ nav ul li {
 
 nav ul li a {
     text-decoration: none;
-    color: #FFFFFF; /*333*/
+    color: #FFFFFF;
     font-weight: bold;
     padding: 10px;
 }
 
 nav ul li a:hover {
-    color: #6B4F4F; /*white*/ 
-    background-color: #F8C8DC; /*ff7043*/ 
+    color: #6B4F4F; 
+    background-color: #F8C8DC; 
     border-radius: 5px;
 }
+
+/* Cuerpo */
 
 main {
     padding: 20px;
@@ -73,6 +81,8 @@ ul li a:hover {
     text-decoration: underline;
 }
 
+/* Receta */
+
 .receta {
     background: white;
     padding: 15px;
@@ -97,7 +107,8 @@ ul li a:hover {
     color: #4A4A4A;
 }
 
-/* Estilos para el modal */
+/* Modal */
+
 #modal {
     display: none;
     position: fixed;
@@ -117,12 +128,16 @@ ul li a:hover {
     border-radius: 10px;
 }
 
+/* Resaltar */
+
 .highlight {
     background-color: yellow;
     font-weight: bold;
     padding: 0.2em;
     border-radius: 3px;
 }
+
+/* Customización automatica de la lista de las recetas */
 
 .custom-list {
     list-style-type: none;
@@ -155,6 +170,8 @@ ul li a:hover {
     padding-left: 0.2em;
 }
 
+/* Scroll */
+
 #scrollToTopBtn {
     position: fixed;
     bottom: 20px;
@@ -179,6 +196,7 @@ ul li a:hover {
 }
 
 /* Responsivo para móviles */
+
 @media (max-width: 600px) {
     nav ul {
         flex-direction: column;
