--- a/CSS/style.css
+++ b/CSS/style.css
@@ -18,13 +18,7 @@ header {
 
 .logo {
   max-width: 30%;
-  height: auto;
-  display: block;
-}
-
-header img {
-  max-width: 30%;
-  height: auto;
+  height: 30%;
   display: block;
 }
 
